--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -5,5 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "paho-mqtt>=2.1.0",
+    "flask>=3.1.2",
+    "redis>=7.1.0",
 ]
