--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "flask-migrate>=4.1.0",
     "flask-socketio>=5.6.0",
     "flask-sqlalchemy>=3.1.1",
-    "psycopg2>=2.9.11",
+    "gunicorn>=23.0.0",
+    "python-dotenv>=1.2.1",
     "redis>=7.1.0",
 ]
