--- a/compose.yaml
+++ b/compose.yaml
@@ -17,6 +17,9 @@ services:
       - ./broker/data:/mosquitto/data
       # Volume for logs
       - ./broker/log:/mosquitto/log
+    networks:
+      - hacktowork2025
+
   redis:
     image: redis
     container_name: redis
@@ -25,6 +28,35 @@ services:
       - 6379:6379
     volumes:
       - redis_db:/data
+    networks:
+      - hacktowork2025
+
+  subscriber:
+    build: ./subscriber/
+    networks:
+      - hacktowork2025
+    environment:
+      - PYTHONUNBUFFERED=1
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - BROKER_HOST=mosquitto
+      - BROKER_PORT=1883
+
+  api:
+    build: ./api/
+    ports:
+      - "5000:5000"
+    networks:
+      - hacktowork2025
+    environment:
+      - PYTHONUNBUFFERED=1
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    volumes:
+      - ./api/hacktowork.db:/app/hacktowork.db
 
 volumes:
   redis_db:
+
+networks:
+  hacktowork2025:
